# linkedin-messaging-api

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  shell.nix
.github/workflows/: python.yaml
.vim/: coc-settings.json
cicd/: custom_style_check.py
examples/: get-conversation.py  listen-for-events.py  manual-login.py  mark-conversation-as-read.py  pickle-example.py  pickle.py  redact-message.py  send-message.py  send-reaction.py  simple-2fa.py
linkedin_messaging/: __init__.py  api_objects.py  linkedin.py
tests/: test_urn.py
