[tool.poetry]
name = "linkedin_messaging"
version = "0.4.2rc1"
description = "An unofficial API for interacting with LinkedIn Messaging"
authors = ["Sumner Evans <inquiries@sumnerevans.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sumnerevans/linkedin-messaging-api"
keywords = ["LinkedIn", "messaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sumnerevans/linkedin-messaging-api/issues"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
beautifulsoup4 = "^4.9.3"
dataclasses-json = "^0.5.4"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
docutils = "^0.17.1"
flake8 = "^3.9.2"
flake8-annotations = "^2.6.2"
flake8-pep3101 = "^1.3.0"
jedi = "^0.18.0"
mypy = "^0.910"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
termcolor = "^1.1.0"
types-termcolor = "^0.1.1"

[tool.pytest.ini_options]
addopts = """
    -vvv
    --doctest-modules
    --ignore-glob='examples/*'
    --ignore-glob='cicd/*'
    --cov=linkedin_messaging
    --cov-report html
    --cov-report term
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.mypy.overrides]]
module = ["bs4"]
ignore_missing_imports = true
