[tool.poetry]
name = "linkedin_messaging"
version = "0.5.3"
description = "An unofficial API for interacting with LinkedIn Messaging"
authors = ["Sumner Evans <inquiries@sumnerevans.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sumnerevans/linkedin-messaging-api"
keywords = ["LinkedIn", "messaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sumnerevans/linkedin-messaging-api/issues"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.0"
beautifulsoup4 = "^4.9.3"
dataclasses-json = "^0.5.4"

[tool.poetry.dev-dependencies]
black = "^22.12"
flake8 = "^6.0.0"
flake8-annotations = "^2.6.2"
flake8-isort = "^5.0.3"
flake8-pep3101 = "^2.0.0"
isort = "^5.11.3"
jedi = "^0.18.0"
mypy = "^0.991"
pre-commit = "^2.21.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
termcolor = "^2.1.1"
types-termcolor = "^1.1.3"

[tool.pytest.ini_options]
addopts = """
    -vvv
    --doctest-modules
    --ignore-glob='examples/*'
    --ignore-glob='cicd/*'
    --cov=linkedin_messaging
    --cov-report html
    --cov-report term
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.mypy.overrides]]
module = ["bs4"]
ignore_missing_imports = true

[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = "mautrix"
line_length = 99

[tool.black]
line-length = 99
target-version = ["py38"]
