[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit_core<4,>=3.2",
]

[project]
name = "linkedin-messaging"
readme = "README.md"
keywords = [
  "LinkedIn",
  "messaging",
]
license = { file = "LICENSE" }
authors = [
    { name = "Sumner Evans", email = "sumner@beeper.com" },
]
requires-python = ">=3.9,<4"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
]
dynamic = [
  "description",
  "version",
]
dependencies = [
  "aiohttp",
  "beautifulsoup4",
  "dataclasses-json",
]
[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "flake8-annotations",
  "flake8-bugbear",
  "flake8-comprehensions",
  "flake8-isort",
  "flake8-pep3101",
  "flake8-print",
  "flit",
  "isort",
  "mypy",
  "pip-tools",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "termcolor",
  "types-termcolor",
]
[project.urls]
"Bug Tracker" = "https://github.com/beeper/linkedin-messaging-api/issues"
Homepage = "https://github.com/beeper/linkedin-messaging-api"

[tool.black]
line-length = 99
target-version = ["py38"]

[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = "linkedin_messaging"
line_length = 99

[tool.pytest.ini_options]
addopts = """
    -vvv
    --doctest-modules
    --ignore-glob='examples/*'
    --ignore-glob='cicd/*'
    --cov=linkedin_messaging
    --cov-report html
    --cov-report term
"""

[[tool.mypy.overrides]]
module = ["bs4"]
ignore_missing_imports = true
